<resources>
    <string name="app_name">GitHub</string>
    <string name="profile_names">Nama Pengguna</string>
    <string name="profile_username">username</string>
    <string name="profile_loc">Lokasi</string>
    <string name="profile_company">Perusahaan</string>
    <string name="profile_followers">Followers</string>
    <string name="profile_following">Following</string>
    <string name="profile_repository">Repository</string>
    <string name="first_dummy_value">1000</string>
    <string name="second_dummy_value">1000</string>
    <string name="third_dummy_value">1000</string>
    <string name="profile_company_dummy">PT Mencari Cinta Sejati</string>
    <string name="profile_loc_dummy">Di Hatimu</string>

    <string-array name="names">
        <item>Jake Wharton</item>
        <item>Amit Shekhar</item>
        <item>Romain Guy</item>
        <item>Chris Banes</item>
        <item>David</item>
        <item>Ravi Tamada</item>
        <item>Deny Prasetyo</item>
        <item>Budi Oktaviyan</item>
        <item>Hendi Santika</item>
        <item>Sidiq Permana</item>
    </string-array>

    <string-array name="username">
        <item>JakeWharton</item>
        <item>amitshekhariitbhu</item>
        <item>romainguy</item>
        <item>chrisbanes</item>
        <item>tipsy</item>
        <item>ravi8x</item>
        <item>jasoet</item>
        <item>budioktaviyan</item>
        <item>hendisantika</item>
        <item>sidiqpermana</item>
    </string-array>

    <string-array name="companies">
        <item>Google, Inc.</item>
        <item>MindOrksOpenSource</item>
        <item>Google</item>
        <item>Google</item>
        <item>Working Group Two</item>
        <item>AndroidHive | Droid5</item>
        <item>gojek-engineering</item>
        <item>KotlinID</item>
        <item>JVMDeveloperID</item>
        <item>Nusantara Beta Studio</item>
    </string-array>

    <string-array name="user_locations">
        <item>Pittsburgh, PA, USA</item>
        <item>New Delhi, India</item>
        <item>California</item>
        <item>Sydney, Australia</item>
        <item>Norway</item>
        <item>India</item>
        <item>Indonesia</item>
        <item>Indonesia</item>
        <item>Bandung</item>
        <item>Indonesia</item>
    </string-array>

    <integer-array name="repositories">
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
    </integer-array>

    <integer-array name="followers">
        <item>24000000</item>
        <item>9600000</item>
        <item>25200000</item>
        <item>57100000</item>
        <item>8000000</item>
        <item>24000000</item>
        <item>17300000</item>
        <item>18000000</item>
        <item>8000000</item>
        <item>2100000</item>
    </integer-array>

    <integer-array name="following">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </integer-array>

    <integer-array name="pfp">
        <item>@drawable/user1</item>
        <item>@drawable/user2</item>
        <item>@drawable/user3</item>
        <item>@drawable/user4</item>
        <item>@drawable/user5</item>
        <item>@drawable/user6</item>
        <item>@drawable/user7</item>
        <item>@drawable/user8</item>
        <item>@drawable/user9</item>
        <item>@drawable/user10</item>

    </integer-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="example">Example: Heru</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="switch_themes">Switch Themes</string>
    <string name="item">Item</string>
    <string name="_404_not_found">404 NOT FOUND</string>
    <string name="favorite_user">Favorite User</string>
    <string name="delete_all">Delete All</string>
    <string name="clear_favorite">Clear Favorite</string>
    <string name="belum_ada_daftar_favorite_user">Belum ada daftar Favorite User</string>
    <string name="silahkan_ketik_username_yg_ingin_anda_cari">Silahkan ketik username yg ingin Anda cari</string>
    <string name="delete_spesific_user">Delete spesific user</string>
    <string name="refresh">Refresh</string>
    <string name="refresh_favorite">Refresh Favorite</string>
</resources>